--- a/html/Signup.html
+++ b/html/Signup.html
@@ -47,7 +47,7 @@
                                         <div id="i69l9" class="form-outline flex-fill mb-0 classRule-i69l9"><select
                                                 aria-label="Default select example" id="ixalm"
                                                 annotationname="usercategory" class="form-select classRule-ixalm">
-                                                <option dataitem="true" value="" id="iwe03" class="classRule-iwe03">
+                                                <option dataitem="true" disabled value="" id="iwe03" class="classRule-iwe03">
                                                     Κατηγορία</option>
                                                 <option dataitem="true" value="Πελάτης" id="i4e6d" class="classRule-i4e6d">Πελάτης
                                                 </option>
