--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -69,6 +69,9 @@
             </div>
           </div>
           <div id="iti4j" class="col d-flex flex-column h-sm-100 classRule-iti4j">
+            <div id="spinner" class="spinner-grow my-3 mx-auto" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
             <div id="irwbh" class="col pt-4 classRule-irwbh">
               <h3 id="i0xhz" class="classRule-i0xhz">Τελευταίες Παραγγελίες μου
               </h3>
