--- a/html/Orders.html
+++ b/html/Orders.html
@@ -1,4 +1,6 @@
-<!DOCTYPE HTML><html><head>
+<!DOCTYPE HTML>
+<html>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" type="text/css" href="../css/Orders.css">
@@ -7,11 +9,117 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    
-    <title>Orders </title>
-    </head><body onunload=""><body><nav id="iiqih" class="navbar navbar-expand-lg navbar-dark bg-dark classRule-iiqih"><div id="iuglv" class="container-fluid classRule-iuglv"><img id="iozex" src="https://i.ibb.co/CB7x8mk/122ec34fc629.png" class="pointer classRule-iozex"/><button type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="io4j8" class="navbar-toggler classRule-io4j8"><span id="ihhzx" class="navbar-toggler-icon classRule-ihhzx"></span></button><div id="navbarSupportedContent" class="collapse navbar-collapse classRule-navbarSupportedContent"><ul id="igjpw" class="navbar-nav ms-auto mb-2 mb-lg-0 classRule-igjpw"><li id="i02ok" target_page="652ce2f649554d95c91e7ebf" class="nav-item nav-link pointer classRule-i02ok"><i id="ihq5x" class="fs-5 classRule-ihq5x bi-person-fill"></i></li><li href="#!" id="insmv" class="nav-item nav-link pointer classRule-insmv"><i id="ixali" class="fs-5 classRule-ixali bi-chat-dots-fill"></i></li><div id="iuo4f" class="p-2 mw-100 classRule-iuo4f">foodchain</div></ul></div></div></nav><div id="imtd" class="container-fluid overflow-hidden classRule-imtd"><div id="ider" class="row vh-100 overflow-auto classRule-ider"><div id="ipzt" class="col-12 col-sm-3 col-xl-2 bg-dark d-flex sticky-top px-0 classRule-ipzt"><div id="iiqz" class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start pt-2 text-white classRule-iiqz"><ul id="menu" class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start max-width classRule-menu"><li id="ip64a" class="nav-item max-width classRule-ip64a"><span id="i172z" target_page="6527f4bc33c12e849040d74a" class="pointer nav-link px-4 classRule-i172z"><i id="i7pmz" class="fs-5 bi-house classRule-i7pmz"></i><span id="iwhal" class="ms-1 d-none d-sm-inline classRule-iwhal">Αρχική</span></span></li><li id="itpfg" class="max-width classRule-itpfg"></li><li id="iigvx" class="max-width classRule-iigvx"><span href="#" id="ikd4x" class="pointer nav-link px-4 classRule-ikd4x"><i id="ias88" class="fs-5 bi-table classRule-ias88"></i><span id="ie52v" class="ms-1 d-none d-sm-inline classRule-ie52v">Παραγγελίες</span></span></li><li id="iaswp" class="dropdown max-width classRule-iaswp"></li><li id="iy7v8" class="max-width classRule-iy7v8"><span id="i5t9j" target_page="652cf17949554d95c91e814c" class="pointer nav-link px-4 classRule-i5t9j"><i id="in8bj" class="fs-5 bi-grid classRule-in8bj"></i><span id="iqqfk" class="ms-1 d-none d-sm-inline classRule-iqqfk">Προϊόντα</span></span></li><li id="i37m4" class="max-width classRule-i37m4"><span id="i0l69" target_page="652913d7d6eabe3f5cabe641" class="pointer nav-link px-4 classRule-i0l69"><i id="ivc1v" class="fs-5 bi-people classRule-ivc1v"></i><span id="i6z2w" class="ms-1 d-none d-sm-inline classRule-i6z2w">Προμηθευτές</span></span></li><li id="it2ci" class="max-width classRule-it2ci"><span id="i9kwo" target_page="652930b0d6eabe3f5cabed6f" class="pointer nav-link px-4 classRule-i9kwo"><i id="iygxr" class="fs-5 bi-gear classRule-iygxr"></i><span id="i29sk" class="ms-1 d-none d-sm-inline classRule-i29sk">Ρυθμίσεις</span></span></li></ul><span id="ircth" target_page="652791ac33c12e849040d049" class="pointer nav-link px-4 classRule-ircth"><i id="i3e4h" class="fs-5 classRule-i3e4h bi-box-arrow-right"></i><span id="iasnj" class="ms-1 d-none d-sm-inline classRule-iasnj">Αποσύνδεση</span></span></div></div><div id="iti4j" class="col d-flex flex-column h-sm-100 classRule-iti4j"><div id="irwbh" class="col pt-4 classRule-irwbh"><h3 id="i0xhz" class="classRule-i0xhz">Οι Παραγγελίες μου</h3><div id="ixoyu" class="table-responsive classRule-ixoyu"><table id="ioyvl" class="table table-stripped2 table-border classRule-ioyvl"><thead id="ie6na" class="table-dark classRule-ie6na"><tr id="infy4" class="classRule-infy4"><th id="itkpr" class="classRule-itkpr"><span id="ijkjf" class="horiz-center-item table-line-height classRule-ijkjf">Κατάστημα</span></th><th id="ic2sz" class="classRule-ic2sz"><span id="i0f2d" class="horiz-center-item table-line-height classRule-i0f2d">Ημερομηνία</span></th><th id="iqpyz" class="classRule-iqpyz"><span id="i3bt8" class="horiz-center-item table-line-height classRule-i3bt8">Κατάσταση</span></th><th id="ilk7b" class="classRule-ilk7b"><span id="i3cuh" class="horiz-center-item table-line-height classRule-i3cuh">Ενέργεια</span></th></tr></thead><tbody dataitems="getAllRows" id="i1m0f" class="classRule-i1m0f"><tr dataitem="true" id="ip22g" transition-by-id target_page="652e3b13f811227d59692c65" class="classRule-ip22g pointer"><td id="i9vfg" class="classRule-i9vfg"><span id="i4wg5" class="horiz-center-item table-line-height classRule-i4wg5">Bite-fate</span></td><td id="iv9ik" class="classRule-iv9ik"><span id="iqsuf" class="horiz-center-item table-line-height classRule-iqsuf">5/9/23</span></td><td id="i7krf" class="classRule-i7krf"><span id="i47nl" class="horiz-center-item table-line-height classRule-i47nl">Αποδοχή</span></td><td id="ihdsq" class="space-around-elements classRule-ihdsq"><div id="i8jab" class="btn pointer bi bi-pencil-square manage-btn classRule-i8jab"></div></td></tr></tbody></table></div></div></div></div></div></body>
+    <title>Orders 
+    </title>
+  </head>
+  <body onunload="">
+    <body>
+      <nav id="iiqih" class="navbar navbar-expand-lg navbar-dark bg-dark classRule-iiqih">
+        <div id="iuglv" class="container-fluid classRule-iuglv">
+          <img id="iozex" src="https://i.ibb.co/CB7x8mk/122ec34fc629.png" class="pointer classRule-iozex"/>
+          <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="io4j8" class="navbar-toggler classRule-io4j8"><span id="ihhzx" class="navbar-toggler-icon classRule-ihhzx"></span></button>
+          <div id="navbarSupportedContent" class="collapse navbar-collapse classRule-navbarSupportedContent">
+            <ul id="igjpw" class="navbar-nav ms-auto mb-2 mb-lg-0 classRule-igjpw">
+              <li id="i02ok" target_page="652ce2f649554d95c91e7ebf" class="nav-item nav-link pointer classRule-i02ok">
+                <i id="ihq5x" class="fs-5 classRule-ihq5x bi-person-fill">
+                </i>
+              </li>
+              <li href="#!" id="insmv" class="nav-item nav-link pointer classRule-insmv">
+                <i id="ixali" class="fs-5 classRule-ixali bi-chat-dots-fill">
+                </i>
+              </li>
+              <div id="iuo4f" class="p-2 mw-100 classRule-iuo4f">foodchain
+              </div>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div id="imtd" class="container-fluid overflow-hidden classRule-imtd">
+        <div id="ider" class="row vh-100 overflow-auto classRule-ider">
+          <div id="ipzt" class="col-12 col-sm-3 col-xl-2 bg-dark d-flex sticky-top px-0 classRule-ipzt">
+            <div id="iiqz" class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start pt-2 text-white classRule-iiqz">
+              <ul id="menu" class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start max-width classRule-menu">
+                <li id="ip64a" class="nav-item max-width classRule-ip64a">
+                  <span id="i172z" target_page="6527f4bc33c12e849040d74a" class="pointer nav-link px-4 classRule-i172z"><i id="i7pmz" class="fs-5 bi-house classRule-i7pmz">
+                    </i><span id="iwhal" class="ms-1 d-none d-sm-inline classRule-iwhal">Αρχική</span></span>
+                </li>
+                <li id="itpfg" class="max-width classRule-itpfg">
+                </li>
+                <li id="iigvx" class="max-width classRule-iigvx">
+                  <span href="#" id="ikd4x" class="pointer nav-link px-4 classRule-ikd4x"><i id="ias88" class="fs-5 bi-table classRule-ias88">
+                    </i><span id="ie52v" class="ms-1 d-none d-sm-inline classRule-ie52v">Παραγγελίες</span></span>
+                </li>
+                <li id="iaswp" class="dropdown max-width classRule-iaswp">
+                </li>
+                <li id="iy7v8" class="max-width classRule-iy7v8">
+                  <span id="i5t9j" target_page="652cf17949554d95c91e814c" class="pointer nav-link px-4 classRule-i5t9j"><i id="in8bj" class="fs-5 bi-grid classRule-in8bj">
+                    </i><span id="iqqfk" class="ms-1 d-none d-sm-inline classRule-iqqfk">Προϊόντα</span></span>
+                </li>
+                <li id="i37m4" class="max-width classRule-i37m4">
+                  <span id="i0l69" target_page="652913d7d6eabe3f5cabe641" class="pointer nav-link px-4 classRule-i0l69"><i id="ivc1v" class="fs-5 bi-people classRule-ivc1v">
+                    </i><span id="i6z2w" class="ms-1 d-none d-sm-inline classRule-i6z2w">Προμηθευτές</span></span>
+                </li>
+                <li id="it2ci" class="max-width classRule-it2ci">
+                  <span id="i9kwo" target_page="652930b0d6eabe3f5cabed6f" class="pointer nav-link px-4 classRule-i9kwo"><i id="iygxr" class="fs-5 bi-gear classRule-iygxr">
+                    </i><span id="i29sk" class="ms-1 d-none d-sm-inline classRule-i29sk">Ρυθμίσεις</span></span>
+                </li>
+              </ul>
+              <span id="ircth" target_page="652791ac33c12e849040d049" class="pointer nav-link px-4 classRule-ircth"><i id="i3e4h" class="fs-5 classRule-i3e4h bi-box-arrow-right">
+                </i><span id="iasnj" class="ms-1 d-none d-sm-inline classRule-iasnj">Αποσύνδεση</span></span>
+            </div>
+          </div>
+          <div id="iti4j" class="col d-flex flex-column h-sm-100 classRule-iti4j">
+            <div id="spinner" class="spinner-grow my-3 mx-auto" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+            <div id="irwbh" class="col pt-4 classRule-irwbh">
+              <h3 id="i0xhz" class="classRule-i0xhz">Οι Παραγγελίες μου
+              </h3>
+              <div id="ixoyu" annotationname="getMyOrders" class="table-responsive classRule-ixoyu">
+                <table id="ioyvl" class="table table-stripped2 table-border classRule-ioyvl">
+                  <thead id="ie6na" class="table-dark classRule-ie6na">
+                    <tr id="infy4" class="classRule-infy4">
+                      <th id="itkpr" class="classRule-itkpr">
+                        <span id="ijkjf" class="horiz-center-item table-line-height classRule-ijkjf">Κατάστημα</span>
+                      </th>
+                      <th id="ic2sz" class="classRule-ic2sz">
+                        <span id="i0f2d" class="horiz-center-item table-line-height classRule-i0f2d">Ημερομηνία</span>
+                      </th>
+                      <th id="iqpyz" class="classRule-iqpyz">
+                        <span id="i3bt8" class="horiz-center-item table-line-height classRule-i3bt8">Κατάσταση</span>
+                      </th>
+                      <th id="ilk7b" class="classRule-ilk7b">
+                        <span id="i3cuh" class="horiz-center-item table-line-height classRule-i3cuh">Ενέργεια</span>
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody dataitems="getAllRows" id="i1m0f" class="classRule-i1m0f">
+                    <tr dataitem="true" id="ip22g" transition-by-id target_page="652e3b13f811227d59692c65" class="classRule-ip22g pointer">
+                      <td id="i9vfg" class="classRule-i9vfg">
+                        <span id="i4wg5" annotationname="ordercustomer" class="horiz-center-item table-line-height classRule-i4wg5">Bite-fate</span>
+                      </td>
+                      <td id="iv9ik" class="classRule-iv9ik">
+                        <span id="iqsuf" class="horiz-center-item table-line-height classRule-iqsuf">5/9/23</span>
+                      </td>
+                      <td id="i7krf" class="classRule-i7krf">
+                        <span id="i47nl" annotationname="orderstatus" class="horiz-center-item table-line-height classRule-i47nl">Αποδοχή</span>
+                      </td>
+                      <td id="ihdsq" class="space-around-elements classRule-ihdsq">
+                        <div id="i8jab" class="btn pointer bi bi-pencil-square manage-btn classRule-i8jab">
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
     <script src="../dist/Orders.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body></html>
+  </body>
+</html>
