--- a/html/EditProduct.html
+++ b/html/EditProduct.html
@@ -148,10 +148,9 @@
                                                             class="classRule-i9970w">Συσκευασία</option>
                                                     </select></div>
                                                 <div id="io7t3x"
-                                                    class="d-flex justify-content-end pt-3 classRule-io7t3x"><button
-                                                        type="button" id="iy0oer" target_page="652cf17949554d95c91e814c"
-                                                        annotationname="updateProduct"
-                                                        class="btn btn-success btn-lg ms-2 classRule-iy0oer pointer">Αποθήκευση</button>
+                                                    class="d-flex justify-content-end pt-3 classRule-io7t3x">
+                                                    <button type="button" id="iy0oer" target_page="652cf17949554d95c91e814c" annotationname="deleteProduct" class="btn btn-success btn-lg ms-2 classRule-iy0oer pointer">Διαγραφή</button>
+                                                    <button type="button" target_page="652cf17949554d95c91e814c" annotationname="updateProduct" id="i0uc5k" class="btn btn-success btn-lg ms-2 pointer classRule-i0uc5k">Αποθήκευση</button>
                                                 </div>
                                             </div>
                                         </div>
