--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -73,7 +73,7 @@
               <span class="sr-only">Loading...</span>
             </div>
             <div id="irwbh" class="col pt-4 classRule-irwbh">
-              <h3 id="i0xhz" class="classRule-i0xhz">Τελευταίες Παραγγελίες μου
+              <h3 id="i0xhz" class="classRule-i0xhz">Τελευταίες Παραγγελίες
               </h3>
               <div id="ixoyu" annotationname="getMyOrders" class="table-responsive classRule-ixoyu">
                 <table id="ioyvl" class="table table-stripped2 table-border classRule-ioyvl">
@@ -99,7 +99,7 @@
                         <span id="i4wg5" annotationname="ordercustomer" class="horiz-center-item table-line-height classRule-i4wg5">Bite-fate</span>
                       </td>
                       <td id="iv9ik" class="classRule-iv9ik">
-                        <span id="iqsuf" class="horiz-center-item table-line-height classRule-iqsuf">5/9/23</span>
+                        <span id="iqsuf" annotationname="orderdate" class="horiz-center-item table-line-height classRule-iqsuf">5/9/23</span>
                       </td>
                       <td id="i7krf" class="classRule-i7krf">
                         <span id="i47nl" annotationname="orderstatus" class="horiz-center-item table-line-height classRule-i47nl">Αποδοχή</span>
@@ -107,6 +107,28 @@
                       <td id="ihdsq" class="space-around-elements classRule-ihdsq">
                         <div id="i8jab" class="btn pointer bi bi-pencil-square manage-btn classRule-i8jab">
                         </div>
+                      </td>
+                    </tr>
+                    <tr dataitem="true" transition-by-id target_page="652e3b13f811227d59692c65" id="itw9tb" class="pointer classRule-itw9tb">
+                      <td id="i6i6c6" class="classRule-i6i6c6">
+                        <span annotationname="ordercustomer" id="ien71h" class="horiz-center-item table-line-height classRule-ien71h">Bite-fate</span>
+                      </td>
+                      <td id="isg9av" class="classRule-isg9av">
+                        <span id="iriszp" annotationname="orderdate" class="horiz-center-item table-line-height classRule-iriszp">5/9/23</span>
+                      </td>
+                      <td id="icnrl6" class="classRule-icnrl6">
+                        <span annotationname="orderstatus" id="ir2snj" class="horiz-center-item table-line-height classRule-ir2snj">Αποδοχή</span>
+                      </td>
+                    </tr>
+                    <tr dataitem="true" transition-by-id target_page="652e3b13f811227d59692c65" id="iy0n52" class="pointer classRule-iy0n52">
+                      <td id="itogsg" class="classRule-itogsg">
+                        <span annotationname="ordercustomer" id="i45j2k" class="horiz-center-item table-line-height classRule-i45j2k">Bite-fate</span>
+                      </td>
+                      <td id="if6lmi" class="classRule-if6lmi">
+                        <span id="ieys7h" annotationname="orderdate" class="horiz-center-item table-line-height classRule-ieys7h">5/9/23</span>
+                      </td>
+                      <td id="iyf7oh" class="classRule-iyf7oh">
+                        <span annotationname="orderstatus" id="iofjxr" class="horiz-center-item table-line-height classRule-iofjxr">Αποδοχή</span>
                       </td>
                     </tr>
                   </tbody>
@@ -250,6 +272,71 @@
                         </div>
                       </div>
                     </div>
+                    <div dataitem="true" id="inx10f" class="col-12 col-xl-5 mr-xl-5 mb-4 mb-xl-0 classRule-inx10f">
+                      <div id="ippeav" class="row align-items-center classRule-ippeav">
+                        <div classtype="patientcard-text" id="i3zdan" class="col d-flex flex-row patientcard-text text-center classRule-i3zdan">
+                          <div id="itjvrc" class="form-group flex wabli-box classRule-itjvrc">
+                            <img datacardimage="true" src="https://i.ibb.co/XD65FGb/c94861090844.jpg" alt="User Image" width="120" height="120" annotationname="userimage" id="i29hgd" class="rounded-circle d-none d-sm-block shadow-lg classRule-i29hgd"/>
+                          </div>
+                          <div id="iffch8" class="rounded p-3 col classRule-iffch8">
+                            <h5 datacardtitle="true" target_page="652921d4d6eabe3f5cabeab7" annotationname="username" transition-by-id id="idn97n" class="card-title pointer classRule-idn97n">Ποικιλίες Ανανιάδη
+                            </h5>
+                            <hr id="iff4e4" class="classRule-iff4e4"/>
+                            <div id="iwh8dl" class="p-2 mw-100 classRule-iwh8dl">Κατηγορία Προϊόντων:
+                            </div>
+                            <div id="i9sqtp" class="bdg-sect classRule-i9sqtp">
+                            </div>
+                            <p classtype="text-green" datacarddescription="true" id="i6z3w8" class="card-text text-green classRule-i6z3w8">Τρόφιμα
+                            </p>
+                            <hr id="i5bk81" class="classRule-i5bk81"/>
+                            <div id="icb0t6" class="p-2 mw-100 classRule-icb0t6">Τελευταία Παραγγελία:
+                            </div>
+                            <p classtype="text-green" datacarddescription="true" id="ixlcbd" class="card-text text-green classRule-ixlcbd">5/9/23
+                            </p>
+                            <hr id="itzop5" class="classRule-itzop5"/>
+                            <div id="iiueij" class="p-2 mw-100 classRule-iiueij">Αξιολόγηση:
+                            </div>
+                            <div id="iufuoc" class="form-group flex wabli-box classRule-iufuoc">
+                              <i id="isalpp" class="fs-5 bi-star-fill classRule-isalpp">
+                              </i>
+                              <i id="idvplo" class="fs-5 bi-star-fill classRule-idvplo">
+                              </i>
+                              <i id="i1a102" class="fs-5 bi-star-fill classRule-i1a102">
+                              </i>
+                              <i id="iuoy75" class="fs-5 bi-star-fill classRule-iuoy75">
+                              </i>
+                              <i id="ibocrk" class="fs-5 bi-star-fill classRule-ibocrk">
+                              </i>
+                            </div>
+                            <div id="iluzzg" class="form-group flex wabli-box classRule-iluzzg">
+                              <i id="itg86g" class="fs-5 bi-heart-fill classRule-itg86g">
+                              </i>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    
+                    <nav aria-label="Page navigation example" id="i706mj" class="classRule-i706mj">
+                      <ul pagination-list="true" id="i769pg" class="pagination classRule-i769pg">
+                        <li pagination-previous="true" id="itgsfi" class="page-item classRule-itgsfi">
+                          <a href="#" id="i8l76x" class="page-link classRule-i8l76x">Previous</a>
+                        </li>
+                        <li id="ic5p9a" class="page-item classRule-ic5p9a">
+                          <a href="#" id="i5986j" class="page-link classRule-i5986j">1</a>
+                        </li>
+                        <li id="ig2cxy" class="page-item classRule-ig2cxy">
+                          <a href="#" id="ipbsge" class="page-link classRule-ipbsge">2</a>
+                        </li>
+                        <li id="i1s6sc" class="page-item classRule-i1s6sc">
+                          <a href="#" id="i1iuud" class="page-link classRule-i1iuud">3</a>
+                        </li>
+                        <li pagination-next="true" id="i9r4el" class="page-item classRule-i9r4el">
+                          <a href="#" id="inbfqf" class="page-link classRule-inbfqf">Next</a>
+                        </li>
+                      </ul>
+                    </nav>
+                    
                   </div>
                 </div>
               </div>
