--- a/html/Orders.html
+++ b/html/Orders.html
@@ -109,8 +109,57 @@
                         </div>
                       </td>
                     </tr>
+                    <tr dataitem="true" transition-by-id target_page="652e3b13f811227d59692c65" id="iu4oac" class="pointer classRule-iu4oac">
+                      <td id="ilyhi" class="classRule-ilyhi">
+                        <span annotationname="ordercustomer" id="ibmd9" class="horiz-center-item table-line-height classRule-ibmd9">Bite-fate</span>
+                      </td>
+                      <td id="i1rjco" class="classRule-i1rjco">
+                        <span id="i5ujz" annotationname="orderdate" class="horiz-center-item table-line-height classRule-i5ujz">5/9/23</span>
+                      </td>
+                      <td id="imxp8v" class="classRule-imxp8v">
+                        <span annotationname="orderstatus" id="in1vkk" class="horiz-center-item table-line-height classRule-in1vkk">Αποδοχή</span>
+                      </td>
+                      <td id="is835b" class="space-around-elements classRule-is835b">
+                        <div id="i2atd9" class="btn pointer bi bi-pencil-square manage-btn classRule-i2atd9">
+                        </div>
+                      </td>
+                    </tr>
+                    <tr dataitem="true" transition-by-id target_page="652e3b13f811227d59692c65" id="ib7nh" class="pointer classRule-ib7nh">
+                      <td id="izqol" class="classRule-izqol">
+                        <span annotationname="ordercustomer" id="i4lok" class="horiz-center-item table-line-height classRule-i4lok">Bite-fate</span>
+                      </td>
+                      <td id="iri46" class="classRule-iri46">
+                        <span id="i6jp2" annotationname="orderdate" class="horiz-center-item table-line-height classRule-i6jp2">5/9/23</span>
+                      </td>
+                      <td id="i0eg2" class="classRule-i0eg2">
+                        <span annotationname="orderstatus" id="i9bu1" class="horiz-center-item table-line-height classRule-i9bu1">Αποδοχή</span>
+                      </td>
+                      <td id="iknqw" class="space-around-elements classRule-iknqw">
+                        <div id="izc8u" class="btn pointer bi bi-pencil-square manage-btn classRule-izc8u">
+                        </div>
+                      </td>
+                    </tr>
                   </tbody>
                 </table>
+                <nav aria-label="Page navigation example" id="igboe9" class="classRule-igboe9">
+                  <ul pagination-list="true" id="i68iy4" class="pagination classRule-i68iy4">
+                    <li pagination-previous="true" id="i3lsw2" class="page-item classRule-i3lsw2">
+                      <a href="#" id="id7xon" class="page-link classRule-id7xon">Previous</a>
+                    </li>
+                    <li id="ih2t21" class="page-item classRule-ih2t21">
+                      <a href="#" id="ibnywl" class="page-link classRule-ibnywl">1</a>
+                    </li>
+                    <li id="ixz72m" class="page-item classRule-ixz72m">
+                      <a href="#" id="in0034" class="page-link classRule-in0034">2</a>
+                    </li>
+                    <li id="i9hvux" class="page-item classRule-i9hvux">
+                      <a href="#" id="ir3qpk" class="page-link classRule-ir3qpk">3</a>
+                    </li>
+                    <li pagination-next="true" id="i7p0nt" class="page-item classRule-i7p0nt">
+                      <a href="#" id="iiumsp" class="page-link classRule-iiumsp">Next</a>
+                    </li>
+                  </ul>
+                </nav>
               </div>
             </div>
           </div>
