--- a/html/Suppliers.html
+++ b/html/Suppliers.html
@@ -92,7 +92,7 @@
                             <img datacardimage="true" src="https://i.ibb.co/XD65FGb/c94861090844.jpg" alt="User Image" width="120" height="120" id="ijuaz5" annotationname="userimage" class="rounded-circle d-none d-sm-block shadow-lg classRule-ijuaz5"/>
                           </div>
                           <div id="igmzpb" class="rounded p-3 col classRule-igmzpb">
-                            <h5 datacardtitle="true" id="irpxlj" transition-by-id target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-irpxlj pointer">Ποικιλίες Ανανιάδη
+                            <h5 datacardtitle="true" id="irpxlj" transition-by-id target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-irpxlj pointer">Προμηθευτής
                             </h5>
                             <hr id="iwf2av" class="classRule-iwf2av"/>
                             <div id="ia9xx2" class="p-2 mw-100 classRule-ia9xx2">Κατηγορία Προϊόντων:
@@ -136,7 +136,7 @@
                             <img datacardimage="true" src="https://i.ibb.co/XD65FGb/c94861090844.jpg" alt="User Image" width="120" height="120" id="it0wno" annotationname="userimage" class="rounded-circle d-none d-sm-block shadow-lg classRule-it0wno"/>
                           </div>
                           <div id="i7oxym" class="rounded p-3 col classRule-i7oxym">
-                            <h5 datacardtitle="true" id="ixn22h" target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-ixn22h pointer">Ποικιλίες Ανανιάδη
+                            <h5 datacardtitle="true" id="ixn22h" target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-ixn22h pointer">Προμηθευτής
                             </h5>
                             <hr id="ismnfl" class="classRule-ismnfl"/>
                             <div id="ioe60w" class="p-2 mw-100 classRule-ioe60w">Κατηγορία Προϊόντων:
@@ -180,7 +180,7 @@
                             <img datacardimage="true" src="https://i.ibb.co/XD65FGb/c94861090844.jpg" alt="User Image" width="120" height="120" id="irpomn" annotationname="userimage" class="rounded-circle d-none d-sm-block shadow-lg classRule-irpomn"/>
                           </div>
                           <div id="i274kq" class="rounded p-3 col classRule-i274kq">
-                            <h5 datacardtitle="true" id="iw1pbl" transition-by-id target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-iw1pbl pointer">Ποικιλίες Ανανιάδη
+                            <h5 datacardtitle="true" id="iw1pbl" transition-by-id target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-iw1pbl pointer">Προμηθευτής
                             </h5>
                             <hr id="i54zum" class="classRule-i54zum"/>
                             <div id="i85oin" class="p-2 mw-100 classRule-i85oin">Κατηγορία Προϊόντων:
@@ -224,7 +224,7 @@
                             <img datacardimage="true" src="https://i.ibb.co/XD65FGb/c94861090844.jpg" alt="User Image" width="120" height="120" id="ivg0tw" annotationname="userimage" class="rounded-circle d-none d-sm-block shadow-lg classRule-ivg0tw"/>
                           </div>
                           <div id="izlc1w" class="rounded p-3 col classRule-izlc1w">
-                            <h5 datacardtitle="true" id="i7x5ci" transition-by-id target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-i7x5ci pointer">Ποικιλίες Ανανιάδη
+                            <h5 datacardtitle="true" id="i7x5ci" transition-by-id target_page="652921d4d6eabe3f5cabeab7" annotationname="username" class="card-title classRule-i7x5ci pointer">Προμηθευτής
                             </h5>
                             <hr id="ifrg8c" class="classRule-ifrg8c"/>
                             <div id="i3wswg" class="p-2 mw-100 classRule-i3wswg">Κατηγορία Προϊόντων:
@@ -261,6 +261,25 @@
                         </div>
                       </div>
                     </div>
+                    <nav aria-label="Page navigation example" id="ihtfbi" class="classRule-ihtfbi">
+                      <ul pagination-list="true" id="ih9ldh" class="pagination classRule-ih9ldh">
+                        <li pagination-previous="true" id="ilnus4" class="page-item classRule-ilnus4">
+                          <a href="#" id="i35i26" class="page-link classRule-i35i26">Previous</a>
+                        </li>
+                        <li id="i2fo8f" class="page-item classRule-i2fo8f">
+                          <a href="#" id="iloa3m" class="page-link classRule-iloa3m">1</a>
+                        </li>
+                        <li id="iakdjg" class="page-item classRule-iakdjg">
+                          <a href="#" id="idbf7g" class="page-link classRule-idbf7g">2</a>
+                        </li>
+                        <li id="i2imw3" class="page-item classRule-i2imw3">
+                          <a href="#" id="i4tckz" class="page-link classRule-i4tckz">3</a>
+                        </li>
+                        <li pagination-next="true" id="it4ixj" class="page-item classRule-it4ixj">
+                          <a href="#" id="ifcbcc" class="page-link classRule-ifcbcc">Next</a>
+                        </li>
+                      </ul>
+                    </nav>
                   </div>
                 </div>
               </div>
