--- a/html/Orders.html
+++ b/html/Orders.html
@@ -99,7 +99,7 @@
                         <span id="i4wg5" annotationname="ordercustomer" class="horiz-center-item table-line-height classRule-i4wg5">Bite-fate</span>
                       </td>
                       <td id="iv9ik" class="classRule-iv9ik">
-                        <span id="iqsuf" class="horiz-center-item table-line-height classRule-iqsuf">5/9/23</span>
+                        <span id="iqsuf" annotationname="orderdate" class="horiz-center-item table-line-height classRule-iqsuf">5/9/23</span>
                       </td>
                       <td id="i7krf" class="classRule-i7krf">
                         <span id="i47nl" annotationname="orderstatus" class="horiz-center-item table-line-height classRule-i47nl">Αποδοχή</span>
