--- a/html/EditOrder.html
+++ b/html/EditOrder.html
@@ -88,6 +88,9 @@
                   <tbody id="i3bch" class="classRule-i3bch">
                   </tbody>
                 </table>
+                <div id="ivx9z" class="form-group flex wabli-box classRule-ivx9z">
+                  <textarea name="-1" id="iqi4f" placeholder="Σχόλιο" annotationname="ordercomment" class="form-control classRule-iqi4f"></textarea>
+                </div>
                 <div id="i5dmu" class="form-group flex wabli-box classRule-i5dmu">
                   <div id="i64aj" target_page="6529199dd6eabe3f5cabe715" class="btn btn-primary pointer classRule-i64aj">Ακύρωση
                   </div>
