add hidden note on orders

--- a/html/EditOrder.html
+++ b/html/EditOrder.html
@@ -93,8 +93,12 @@
                   <tbody id="i3bch" class="classRule-i3bch">
                   </tbody>
                 </table>
-                <div id="ivx9z" class="form-group flex wabli-box classRule-ivx9z">
-                  <textarea name="-1" id="iqi4f" placeholder="Σχόλιο" annotationname="ordercomment" class="form-control classRule-iqi4f"></textarea>
+                <div id="ivx9z" class="form-group flex flex-column p-2 wabli-box classRule-ivx9z">
+                  <p>Σχόλιο Πελάτη</p>
+                  <textarea name="-1" id="iqi4f" placeholder="Σχόλιο Πελάτη" readonly annotationname="ordercomment" class="form-control classRule-iqi4f">Κανένα σχόλιο</textarea>
+                  <br/>
+                  <p id="4ui4">Σημείωση</p>
+                  <textarea name="-2" id="4ui3" placeholder="Σημείωση Πελάτη" readonly annotationname="ordernote" class="form-control classRule-iqi4f">Καμία σημείωση</textarea>
                 </div>
                 <div id="i5dmu" class="form-group flex wabli-box classRule-i5dmu">
                   <div id="i64aj" target_page="6529199dd6eabe3f5cabe715" class="btn btn-primary pointer classRule-i64aj">Ακύρωση
