--- a/html/OrderSummary.html
+++ b/html/OrderSummary.html
@@ -94,8 +94,12 @@
                     
                   </tbody>
                 </table>
-                <div id="ivx9z" class="form-group flex wabli-box classRule-ivx9z">
+                <div id="ivx9z" class="form-group flex flex-column p-2 wabli-box classRule-ivx9z">
+                  <p>Σχόλιο Πελάτη</p>
                   <textarea name="-1" id="iqi4f" placeholder="Σχόλιο" annotationname="ordercomment" class="form-control classRule-iqi4f"></textarea>
+                  <br/>
+                  <p>Κρυφή Σημείωση</p>
+                  <textarea name="-2" placeholder="Σημείωση" annotationname="ordernote" class="form-control classRule-iqi4f"></textarea>
                 </div>
                 <div id="i5dmu" class="form-group flex wabli-box classRule-i5dmu">
                   <div id="i64aj" target_page="6527f4bc33c12e849040d74a" class="btn btn-primary pointer classRule-i64aj">Αποστολή
