add print functionality

--- a/html/EditOrder.html
+++ b/html/EditOrder.html
@@ -87,6 +87,9 @@
               <div id="iqbln" class="form-group flex wabli-box classRule-iqbln">
                 <h3 id="iy0zj" class="classRule-iy0zj">Προϊόντα
                 </h3>
+                <button id="printButton" class="btn btn-primary">
+                  <i class="bi bi-printer"></i>
+                </button>
               </div>
               <div id="i60fb" class="form-group flex wabli-box classRule-i60fb">
                 <table wabliname="list" wablitype="list" dataitems="true" id="imt3z" class="classRule-imt3z">
