add phone number

--- a/html/Settings.html
+++ b/html/Settings.html
@@ -359,6 +359,46 @@
                                             </div>
                                             <label
                                                 draggable="true"
+                                                id="izgmi32"
+                                                class="col-form-label p-2 font-weight-bold classRule-izgmi3"
+                                                >Τηλέφωνο</label
+                                            >
+                                            <div
+                                                draggable="true"
+                                                id="i6j9wa2"
+                                                class="d-flex flex-row align-items-center mb-4 classRule-i6j9wa"
+                                            >
+                                                <i
+                                                    draggable="true"
+                                                    id="ivgy062"
+                                                    class="bi-phone bi-envelope me-3 classRule-ivgy06"
+                                                ></i>
+                                                <div
+                                                    draggable="true"
+                                                    id="iagzwd2"
+                                                    class="form-outline flex-fill mb-0 classRule-iagzwd"
+                                                >
+                                                    <input
+                                                        type="text"
+                                                        required="true"
+                                                        draggable="true"
+                                                        placeholder="Τηλέφωνο"
+                                                        autocomplete="off"
+                                                        id="idacsj2"
+                                                        annotationname="userphone"
+                                                        class="form-control classRule-idacsj"
+                                                    />
+                                                    <label
+                                                        draggable="true"
+                                                        for="form3Example3c"
+                                                        id="i85uxd2"
+                                                        class="form-label d-none classRule-i85uxd"
+                                                        >Τηλέφωνο</label
+                                                    >
+                                                </div>
+                                            </div>
+                                            <label
+                                                draggable="true"
                                                 id="iikz5j"
                                                 class="col-form-label p-2 font-weight-bold classRule-iikz5j"
                                                 >Κατηγορία</label
